# danaagain

./: .gitignore  CMakeLists.txt  output.txt
art/player/: player_icon.piskel
assets/scene/: title.json
client/: CMakeLists.txt  game.cpp  game.h  main.cpp
engine/: CMakeLists.txt  engine.cpp
engine/include/: engine.h
networking/: CMakeLists.txt  net_common.cpp
networking/include/: net_common.h
server/: CMakeLists.txt  main.cpp
